Fixed wrapping issue with finalist names on small screens

--- a/css/style_results.css
+++ b/css/style_results.css
@@ -26,6 +26,11 @@
 	width:29px;
 	height:82px;
 }
+.result .forceAllowWrap {
+	position:relative;
+	display:inline-block;
+	width:0;
+}
 .result h1 {
 	font-size:24px;
 	margin-top:0;
@@ -41,6 +46,9 @@
 	font-weight:normal;
 	font-style:italic;
 	margin-left:0px;
+}
+.result .finalistName, .result .region {
+	white-space: nowrap;
 }
 .result img {
 	float:left;
